--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/nvlannasik/thrive-chart-TA#readme",
   "dependencies": {
+    "axios": "^1.1.3",
     "body-parser": "^1.20.1",
     "confidence": "^5.0.1",
     "dotenv": "^16.0.3",
