fixing typo chart to cart

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@
 
 DB_CONNECTION = <YOUR DATABASE CONNECTION STRING>
 PORT_SERVER = <YOUR SERVER PORT>
+API_GATEWAY = <YOUR API GATEWAY>
 
 # ------------------------------------------------------------------
 # MESSAGE BROKER RABBITMQ
